Лаб_6: Исправить ошибки в задании 3

--- a/lab_6/lab_6/templates/event.html
+++ b/lab_6/lab_6/templates/event.html
@@ -5,7 +5,7 @@
     <title>Мероприятие</title>
 </head>
 <body>
-<img src="/static/images/event.jpg" alt="мероприятие">
+<img width="300px" src="/static/images/event.jpg" alt="мероприятие">
 <p><b>{{ event_name }}</b> — это {{ discription }}</p>
 <p>
     <input name=action onclick="history.back()"
