--- a/lab_6/lab_6/templates/subject.html
+++ b/lab_6/lab_6/templates/subject.html
@@ -5,7 +5,7 @@
     <title>Дисциплина</title>
 </head>
 <body>
-<img src="/static/images/book.jpg" alt="книга">
+<img width="300px" src="/static/images/book.jpg" alt="книга">
 <p><b>{{ sub }}</b> — это {{ discription }}</p>
 <p>
     <input name=action onclick="history.back()"
