--- a/lab_4/lab_4_3/book_searching.css
+++ b/lab_4/lab_4_3/book_searching.css
@@ -58,7 +58,7 @@ p {
 .book_cards_wrapper {
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
+    justify-content: space-evenly;
 }
 
 .book_card {
@@ -66,6 +66,7 @@ p {
     padding: 0.5rem;
     border-radius: 0.5rem;
     width: 30%;
+    margin-bottom: .5rem;
 }
 
 .book_info__value {
