--- a/lab_7/templates/statistics.html
+++ b/lab_7/templates/statistics.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Новый читатель</title>
+    <title>Статистика</title>
 </head>
 <body>
 
