--- a/lab_7/templates/new_reader.html
+++ b/lab_7/templates/new_reader.html
@@ -2,9 +2,29 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
     <title>Новый читатель</title>
+    {% import "macros.html" as macros %}
 </head>
 <body>
-
+<div class=menu>
+    <ul>
+        <li class=active><a href={{ url_for("new_reader") }}>Новый читатель</a></li>
+    </ul>
+</div>
+<div class=block>
+    <form action="{{ url_for('index') }}" method="get">
+        <p>
+            <label for="name">
+                Имя читателя:
+                <input type="text" name="new_reader">
+            </label>
+        </p>
+        <p>
+            <input type="submit" value="Добавить читателя">
+            <input type="button" onclick="history.back()" value="Отменить">
+        </p>
+    </form>
+</div>
 </body>
 </html>
