--- a/lab_7/templates/index.html
+++ b/lab_7/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
+    <link rel="stylesheet" href="/static/css/style.css"/>
     <title>Карточка читателя</title>
     {% import "macros.html" as macros %}
 </head>
