--- a/lab_7/templates/statistics.html
+++ b/lab_7/templates/statistics.html
@@ -2,9 +2,16 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/static/css/style.css"/>
     <title>Статистика</title>
 </head>
 <body>
-
+<div class=menu>
+    <ul>
+        <li><a href={{ url_for("index") }}>Читатель</a></li>
+        <li><a href={{ url_for('book') }}>Книги</a></li>
+        <li class=active><a href={{ url_for('statistics') }}>Статистика</a></li>
+    </ul>
+</div>
 </body>
 </html>
