--- a/lab_7/templates/macros.html
+++ b/lab_7/templates/macros.html
@@ -149,3 +149,39 @@
         </form>
     </div>
 {% endmacro %}
+
+{% macro render_query_table(table_name, relation, id, len) %}
+    <p>
+        <b>{{ table_name }}</b>
+    </p>
+    {% set n = len(relation) %}
+    {% if n == 0 %}
+        <p>Нет информации.</p>
+    {% else %}
+        <table class="table">
+            <thead>
+            <tr>
+                {% for name in relation.dtypes.index %}
+                    {% if name != id %}
+                        <th>{{ name }}</th>
+                    {% endif %}
+                {% endfor %}
+            </tr>
+            </thead>
+            <tbody>
+
+            {% for i in range(n) %}
+                <tr>
+                    {% for name in relation.dtypes.index %}
+                        {% if name != id %}
+                            <td>
+                                {{ relation.loc[i, name] }}
+                            </td>
+                        {% endif %}
+                    {% endfor %}
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    {% endif %}
+{% endmacro %}
